# api/handlers/review.go
@@ -36,7 +36,7 @@ func NewReviewHandler(reviewService services.ReviewService, foodService services
 // @Failure 401 {object} response.Response "인증 실패"
 // @Security BearerAuth
 // @Router /reviews [post]
-func (h *ReviewHandler) CreateReview(c *gin.Context) {
+func (h *ReviewHandler) Create(c *gin.Context) {
 	var req models.CreateReviewRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.Error(apperr.BadRequest("invalid request body", err))
@@ -49,7 +49,7 @@ func (h *ReviewHandler) CreateReview(c *gin.Context) {
 		return
 	}
 
-	newReview, err := h.reviewService.CreateReview(c, req, userID)
+	newReview, err := h.reviewService.Create(c, req, userID)
 	if err != nil {
 		c.Error(err)
 		return
@@ -69,10 +69,10 @@ func (h *ReviewHandler) CreateReview(c *gin.Context) {
 // @Param reviewID path string true "리뷰 ID"
 // @Param review body models.UpdateReviewRequest true "리뷰 수정 정보"
 // @Success 200 {object} response.Response{data=models.Review} "리뷰 수정 성공"
-// @Failure 403 {object} response.Response "수정 권한 없음"
+// @Failure 401 {object} response.Response "수정 권한 없음"
 // @Security BearerAuth
 // @Router /reviews/{reviewID} [patch]
-func (h *ReviewHandler) UpdateReview(c *gin.Context) {
+func (h *ReviewHandler) Update(c *gin.Context) {
 	var req models.UpdateReviewRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.Error(apperr.BadRequest("invalid request body", err))
@@ -87,7 +87,7 @@ func (h *ReviewHandler) UpdateReview(c *gin.Context) {
 
 	reviewID := c.Param("reviewID")
 
-	updatedReview, err := h.reviewService.UpdateReview(c, reviewID, userID, req)
+	updatedReview, err := h.reviewService.Update(c, reviewID, userID, req)
 	if err != nil {
 		c.Error(err)
 		return
@@ -96,6 +96,37 @@ func (h *ReviewHandler) UpdateReview(c *gin.Context) {
 	c.JSON(http.StatusOK, response.Response{
 		Success: true,
 		Data:    updatedReview,
+	})
+}
+
+// @Summary 리뷰 삭제
+// @Description 특정 리뷰를 삭제한다.
+// @Tags Review
+// @Accept json
+// @Produce json
+// @Param reviewID path string true "리뷰 ID"
+// @Success 200 {object} response.Response{data=string} "리뷰 삭제 성공"
+// @Failure 401 {object} response.Response "삭제 권한 없음"
+// @Security BearerAuth
+// @Router /reviews/{reviewID} [delete]
+func (h *ReviewHandler) Delete(c *gin.Context) {
+	userID, err := GetUserID(c)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	reviewID := c.Param("reviewID")
+
+	err = h.reviewService.Delete(c, reviewID, userID)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	c.JSON(http.StatusOK, response.Response{
+		Success: true,
+		Data:    "Review deleted successfully",
 	})
 }
 
