# docs/swagger.yaml
@@ -732,6 +732,37 @@ paths:
       tags:
       - Review
   /reviews/{reviewID}:
+    delete:
+      consumes:
+      - application/json
+      description: 특정 리뷰를 삭제한다.
+      parameters:
+      - description: 리뷰 ID
+        in: path
+        name: reviewID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 리뷰 삭제 성공
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "401":
+          description: 삭제 권한 없음
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - BearerAuth: []
+      summary: 리뷰 삭제
+      tags:
+      - Review
     patch:
       consumes:
       - application/json
@@ -760,7 +791,7 @@ paths:
                 data:
                   $ref: '#/definitions/models.Review'
               type: object
-        "403":
+        "401":
           description: 수정 권한 없음
           schema:
             $ref: '#/definitions/response.Response'
